Updating dependency with owasp check